format with black

--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,30 @@
 [tox]
 minversion = 1.6
+envlist = py3-flake8,black
+skip_missing_interpreters = true
 skipsdist = True
-envlist = flake8
-
-[testenv:flake8]
-basepython = python3
-commands = flake8 {posargs}
-deps = flake8
 
 [flake8]
-exclude = .tox
+exclude = bin,lib,include,.venv,.tox,dist,doc,build,*.egg,submodules,__pycache__
 count = 1
 show-pep8 = 1
 show-source = 1
 statistics = 1
+enable-extensions = G
+import-order-style = appnexus
+application-package-names = precise_tools
+convention = pep257
+select = A,B,B9,C,D,E,F,G,I,RST,W
+# Disable flake8 checks that fight with Black's automated formatting.
+ignore = E203, E501, W503, W504
+
+[testenv]
+commands = flake8 {posargs}
+deps =
+    flake8
+    flake8-import-order
+
+[testenv:black]
+basepython = python3
+commands = black --check --diff -t py39 app.py precise_tools
+deps = black
